style.css
/* ... */
.welcomePanel {
    padding-top: 15px;
}


/* CUSTOM STYLES 自定義樣式
- - - - - - - - - - - - - - - - - */

/* --- Custom Colors 自定義顏色 --- */

:root {
    --custom-avatar: calc(var(--avatar-base-width) * 0.8);
    --custom-chat-avatar-size: var(--custom-ChatAvatar, 40px);
    --custom-chat-avatar-frame-size: calc(var(--custom-chat-avatar-size) + 8px);
    --custom-big-chat-avatar-width: calc(var(--custom-chat-avatar-size) * var(--big-avatar-width-factor));
    --custom-big-chat-avatar-height: calc(var(--custom-chat-avatar-size) * var(--big-avatar-height-factor));
    --custom-big-chat-avatar-frame-width: calc(var(--custom-big-chat-avatar-width) + 8px);
    --custom-big-chat-avatar-frame-height: calc(var(--custom-big-chat-avatar-height) + 8px);
    --customThemeMenuColor: var(--SmartThemeChatTintColor);
    --active: var(--customThemeColor);
    --SmartThemeCheckboxTickColor: var(--SmartThemeBlurTintColor);
    --customMesPadding: 1em;
    --customRippleAvatarRatio: 1.5;
    --moonlit-sb-topbar-offset: var(--sb-topbar-layout-offset, var(--topBarBlockSize));

    /* Secondary Colors 次要顏色 */
    --fullred: rgb(229, 57, 53);
    --crimson70a: rgb(229, 57, 53);
    --black30a: color-mix(in srgb, var(--SmartThemeBlurTintColor) 30%, transparent);
    --black50a: color-mix(in srgb, var(--SmartThemeBlurTintColor) 50%, transparent);
    --black70a: color-mix(in srgb, var(--SmartThemeBlurTintColor) 70%, transparent);
    --cobalt30a: color-mix(in srgb, var(--SmartThemeBodyColor) 10%, transparent);
    --okGreen70a: rgb(156, 204, 101, 0.8);
    --warning: var(--customThemeColor);
    --golden: var(--customThemeColor);

    --customThemeColor-25: color-mix(in srgb, var(--customThemeColor) 25%, transparent);

    /* !!! Important: Do Not Modify 不要修改 !!! */
    --topBarBlockSize: calc(var(--topBarIconSize) + var(--topBarBlockPadding) - 1px);
    --bottomInputAreaHeight: 115px;
    --custom-echo-avatar: var(--custom-chat-avatar-frame-size);
}
@media screen and (max-width: 1000px) {
    :root {
        --topBarBlockSize: calc(var(--topBarIconSize) + var(--topBarBlockPadding) + 5px) !important;
    }
}

/* Alert Red 紅色警告 */
.redOverlayGlow {
    color: var(--fullred);
}
/* Connection Status 連線狀態 */
.online_status_indicator {
    background-color: var(--crimson70a);
}
.online_status_indicator.success {
    background-color: var(--okGreen70a);
}
.success {
    color: var(--okGreen70a);
}

/* Remove Black Shadow 消除黑色陰影 */
button:focus,
a:focus {
    outline: none;
}
html * {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}
.custom-drawer-icon,
.inline-drawer-icon,
.right_menu_button,
input[type='checkbox'] {
    filter: none;
    box-shadow: none !important;
}
.mes_button, .extraMesButtons > div {
    filter: drop-shadow(0px 0px 2px var(--SmartThemeBlurTintColor));
}
.mes_edit_buttons {
    filter: drop-shadow(0px 0px 2px var(--SmartThemeBlurTintColor));
}
#options, #extensionsMenu, .popup .popper-modal, .list-group {
    box-shadow: 0 0 15px color-mix(in srgb, var(--SmartThemeBlurTintColor) 50%, transparent);
}
.menu_button {
    filter: none !important;
    border-width: 1px !important;
}
.draggable {
    filter: drop-shadow(1px 1px 2px transparent) !important;
}

/* Loading Animation 載入動畫 */
.transparent_dialogue_popup {
    box-shadow: none !important;
}

/* Background Effect 背景模糊 */
#bg1, #bg_custom {
    opacity: var(--customCSS-bg-opacity , 1);
    filter: blur(calc(var(--customCSS-bg-blur) * 1px)) !important;
}

/* Hyperlinks 超連結 */
a {
    color: var(--customThemeColor);
    transition: all 0.5s ease;
    font-weight: bold;

    &:hover {
        color: var(--customThemeColor2);
        filter: none;
    }
}

/* Text Selection 選取文字 */
::selection {
    background-color: color-mix(in srgb, var(--customThemeColor) 50%, transparent 50%);
    color: #FFF;
}

/* Horizontal Divider 水平分割線 */
hr {
    background-image: none !important;
    background-color: var(--SmartThemeBodyColor) !important;
    margin: 15px 0;
    height: 1px;
    min-height: 1px;
    border: 0;
    opacity: 0.3;
}

/* --- Headings 標題樣式 --- */

/* H1 Title 一級標題 */
h1 {
    font-size: calc(var(--mainFontSize) + 0.6rem);
    color: var(--customThemeColor);
    margin-bottom: 20px;
    padding: 10px 0;
    border-top: 3px solid var(--customThemeColor);
    border-bottom: 3px solid var(--customThemeColor);
    line-height: 32px;
    letter-spacing: 1px;
}
/* H2 Title 二級標題 */
h2 {
    font-size: calc(var(--mainFontSize) + 0.5rem);
    margin: 15px 0;
    line-height: 30px;
    letter-spacing: 1px;
}
/* H3 Title 三級標題 */
h3 {
    text-align: left;
    margin-top: 5px !important;
    margin-bottom: 5px !important;
    padding-left: 10px;
    letter-spacing: 1px;
    border: 0;
    border-left: 3.5px solid var(--customThemeColor);
}
.drawer-content h3 {
    white-space: nowrap;
}
h4 {
    letter-spacing: 0.8px;
    margin-top: 10px;
    font-weight: 500;
}

/* General Title 普通標題 */
.standoutHeader,
.title_restorable {
    margin: 15px 0;
    padding: 0;
    min-height: 33px;
    padding-bottom: 8px;
    background-image: none !important;
    border-radius: 0px !important;
    letter-spacing: 0.8px;
    display: flex;
    align-items: center;
    border: 0;
    border-bottom: 1.25px solid var(--SmartThemeBodyColor);
    font-weight: 600;

    h3 {
        margin: unset;
        padding-left: unset;
        border-left: unset;
    }
}
.range-block-title {
    margin: 3px 0;
    font-weight: 600;
}

/* --- Lists 列表樣式 --- */
ol, ul:has(li) {
    margin-block-start: 10px;
    margin-block-end: 10px;
    margin-inline-start: 3px;
    margin-inline-end: 0px;
    padding-inline-start: 15px;
    unicode-bidi: isolate;
}
ol ::marker,
ol ol ::marker {
    color: var(--customThemeColor);
}
li {
    padding-left: 5px;
}

/* --- Code Tags 程式碼標籤 --- */

code {
    line-height: normal;
    background: var(--SmartThemeBlurTintColor);
    color: var(--customThemeColor);
}
/* ... */

